2012-11-07  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb-icc.c (icc_send_data_block_internal): New.
	(icc_send_data_block_time_extension): New.
	(icc_handle_timeout): Use icc_send_data_block_time_extension.
	(icc_send_data_block): Only one argument.
	(USBthread): Follow the change.

2012-11-01  Niibe Yutaka  <gniibe@fsij.org>

	* tool/gnuk_upgrade.py (main): New option '-k' to specify keygrip
	for non-smartcard key.
	(gpg_sign): Support non-smartcard key.

2012-10-31  Niibe Yutaka  <gniibe@fsij.org>

	* tool/get_raw_public_key.py: New.

2012-10-26  Niibe Yutaka  <gniibe@fsij.org>

	* GNUK_USB_DEVICE_ID (Product_STRING): It's considered better not
	to include vendor name.  Change the name to "Gnuk Token" (was:
	FSIJ USB Token).

2012-10-13  Niibe Yutaka  <gniibe@fsij.org>

	* boards/STBEE_MINI/board.c [!DFU_SUPPORT] (hwinit1): Don't run
	when "user switch" is pushed.  This is for JTAG/SWD debugger.

2012-09-25  Niibe Yutaka  <gniibe@fsij.org>

	* tool/stlinkv2.py (main): Print out option bytes value.
	Call reset_sys before blank_check.

2012-09-18  Niibe Yutaka  <gniibe@fsij.org>

	* tool/stlinkv2.py (stlinkv2.option_bytes_erase)
	(stlinkv2.flash_erase_all, stlinkv2.flash_erase_page): : Fix
	OperationFailure (was OperationError).
	(main): Call option_bytes_erase if it's not 0xff.

2012-09-12  Niibe Yutaka  <gniibe@fsij.org>

	* src/sha256.c: Include <stdint.h>.

	* src/sha256.h (SHA256_DIGEST_SIZE, SHA256_BLOCK_SIZE): Move
	from sha256.c.

2012-08-29  Niibe Yutaka  <gniibe@fsij.org>

	* tool/hub_ctrl.py (__main__): Fix to busnum (was: bunum).
	Thanks to Henry Hu.

2012-08-03  Niibe Yutaka  <gniibe@fsij.org>

	* Version 1.0.1.
	* src/usb_desc.c (gnukStringSerial): Updated.
	* src/main.c (ID_OFFSET): Fix.

2012-08-02  Niibe Yutaka  <gniibe@fsij.org>

	* test/gnuk.py (gnuk_token.get_string): New.
	* test/features/991_version_string.feature: New.

2012-07-21  Niibe Yutaka  <gniibe@fsij.org>

	* Version 1.0.
	* src/usb_desc.c (gnukStringSerial): Updated.
