@@ -1,3 +1,8 @@
+2012-12-05  Niibe Yutaka  <gniibe@fsij.org>
+
+	* tool/gnuk_remove_keys_libusb.py: New.
+	* tool/gnuk_token.py: New.
+
 2012-11-07  Niibe Yutaka  <gniibe@fsij.org>
 
 	* src/usb-icc.c (icc_send_data_block_internal): New.
